# VocabularyLearning

./: .gitignore  CONTEXT.md  DESIGN.md  README.md
backend/: pyproject.toml
backend/app/: db.py  enrichment.py  main.py  models.py  repositories.py  routes.py  scheduling.py  schema.sql  services.py
backend/tests/: test_book_import.py  test_export_readiness.py  test_health.py  test_prepare_today_review.py
docs/superpowers/plans/: 2026-07-01-vocabulary-learning-mvp.md
docs/superpowers/specs/: 2026-07-01-vocabulary-learning-design.md
frontend/: index.html  package.json  pnpm-lock.yaml  tsconfig.node.json  vite.config.ts
frontend/src/: App.test.tsx  App.tsx  api.test.ts  api.ts  styles.css
frontend/src/components/: ExportView.tsx  StudySession.test.tsx  StudySession.tsx  TodayView.test.tsx  TodayView.tsx
