[project]
name = "vocabulary-learning-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "python-multipart>=0.0.9",
  "pydantic>=2.8",
  "genanki>=0.13"
]

[project.optional-dependencies]
test = [
  "pytest>=8.2",
  "httpx>=0.27"
]

[tool.pytest.ini_options]
pythonpath = ["."]
